<resources>
    <string name="app_name">tripstori</string>

    <string name="note">note</string>
    <string name="geo">geo</string>
    <string name="image">image</string>
    <string name="web">web</string>

    <string name="hello_main">Hello main !</string>
    <string name="hello_about">Hello about !</string>
    <string name="action_add_note">Add note</string>
    <string name="action_add_geo">Add geo</string>
    <string name="action_add_img">Add image</string>
    <string name="action_add_web">Add web page</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_pdf">PDF</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="add_activity_title">add an interest</string>
    <string name="add_activity_title_with_type">add a %1s interest</string>
    <string name="input_title_default">titre</string>
    <string name="input_title"></string>
    <string name="input_text_default">description</string>
    <string name="input_text"></string>
    <string name="input_date_default">date</string>
    <string name="input_date"></string>
    <string name="input_time_default">heure</string>
    <string name="input_time"></string>
    <string name="input_location_default">lieu</string>
    <string name="input_location"></string>
    <string name="input_gps_default">coordonnées gps</string>
    <string name="input_gps"></string>
    <string name="input_image_url_default">image url</string>
    <string name="input_image_url"></string>
    <string name="input_web_url_default">web url</string>
    <string name="input_web_url"></string>

</resources>
