<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_add_note" android:title="@string/action_add_note"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_add_geo" android:title="@string/action_add_geo"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_add_img" android:title="@string/action_add_img"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_add_web" android:title="@string/action_add_web"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_delete_all" android:title="@string/action_delete_all"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
