<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme">
    </android.support.v7.widget.Toolbar>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_geo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geo"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <EditText
        android:id="@+id/edittext_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:lines="2"
        android:minLines="1"
        android:maxLines="2"
        android:scrollHorizontally="false"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:maxLength="50"
        android:hint="@string/input_title_default"
        android:text="@string/input_title"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/edittext_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:lines="3"
        android:minLines="1"
        android:maxLines="4"
        android:scrollHorizontally="false"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:maxLength="200"
        android:hint="@string/input_text_default"
        android:text="@string/input_text"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/input_date_default"/>

        <TextView
            android:id="@+id/textview_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/input_time_default"/>

    </LinearLayout>


</LinearLayout>